--- a/css/desktop.css
+++ b/css/desktop.css
@@ -8,7 +8,7 @@
     background-repeat: no-repeat;
     background-size: auto;
     background-position: 0px -200px;
-    background-image: url(../received_1151693225997184.jpeg);
+    background-image: url(../promophoto6.jpg);
     background-size: cover;
     position:relative;
 }
