--- a/css/mobile.css
+++ b/css/mobile.css
@@ -18,7 +18,7 @@ body{
     width:100vw;
     background-repeat: no-repeat;
     background-size: auto;
-    background-image: url(../received_1151693225997184.jpeg);
+    background-image: url(../promophoto6.jpg);
     background-position: -700px 0px;
     background-size: cover;
     position:relative;
